# trst

./: .pre-commit-config.yaml  .tarpaulin.toml  Cargo.toml
.github/workflows/: ci.yml
src/: app.rs  client.rs  config.rs  main.rs  protocol.rs  util.rs
src/ui/: details.rs  files.rs  help.rs  mod.rs  torrent_list.rs
