[package]
name = "trst"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"

[dependencies]
crossterm = "0.29"
ratatui = "0.30"
ureq = { version = "3", features = ["json", "charset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
dirs = "6"

[profile.release]
lto = true
strip = true
